# cod-zombie-2d-clone

./: .gitignore  Cargo.toml  Makefile.toml  README.md  wasm.d.ts  wasm.js  wasm_bg.wasm.d.ts
.github/workflows/: publish.yaml
assets/: level_1.custom  level_1.level
assets/characters/player/: player.animation.ron
assets/game/: easy.level.ron
assets/maps/map_iso/: iso_map.asset.ron
assets/weapons/: list.ron  weapons.ron
client/: Cargo.toml  Makefile.toml
client/.cargo/: config.toml
client/assets/: level_1.custom  level_1.level
client/assets/characters/player/: player.animation.ron
client/assets/characters/zombie/: zombie.animation.ron
client/assets/game/: easy.level.ron
client/assets/maps/map_iso/: iso_map.asset.ron  test.tmx
client/assets/weapons/: weapons.ron
client/public/: index.html
client/src/: character_animation.rs  client.rs  config.rs  game.rs  homemenu.rs  ingameui.rs  main.rs  player.rs  ui_utils.rs
client/src/ingameui/: ingameui.rs  player.rs
client/src/map/: data.rs  loader.rs  mod.rs  render.rs
client/src/map/tiled_map/: mod.rs  texture.rs  tiled.rs  tiled_usage.rs
client/src/menu/: homemenu.rs  ingameui.rs  mod.rs  onlinemenu.rs  ui_utils.rs
client/src/p2p/: checksum.rs  config.rs  local.rs  mod.rs  online.rs
client/src/plugins/: frame_cnt.rs  mod.rs
game/: Cargo.toml  Makefile.toml  rust-toolchain.yaml
game/.cargo/: config.toml
game/assets/game/: easy.level.ron
game/assets/maps/map_iso/: iso_map.asset.ron
game/assets/maps/map_runista/: runista.asset.ron  runista.tmx
game/public/: index.html
game/src/: character_animation.rs  main.rs
game/src/ingameui/: ingameui.rs  mod.rs  player.rs
game/src/menu/: homemenu.rs  onlinemenu.rs  ui_utils.rs
game/src/p2p/: checksum.rs  config.rs  mod.rs  online.rs
game/src/plugins/: frame_cnt.rs  mod.rs  web.rs
game/src/shared/: character.rs  collider.rs  debug.rs  game.rs  health.rs  mod.rs  utils.rs
game/src/shared/map/: map_item_system.rs  mod.rs  render.rs
game/src/shared/map/tiled_map/: mod.rs  tiled.rs  tiled_map_properties.rs  tiled_rotate.rs
game/src/shared/player/: input.rs  interaction.rs  mod.rs
game/src/shared/weapons/: ammunition.rs  mod.rs  weapons.rs
game/src/shared/zombies/: spawner.rs  zombie.rs
logs/: 2022-04-13.md  2022-04-14.md  2022-04-15.md  2022-04-18.md  2022-04-19.md  2022-04-20.md  2022-04-23.md  2022-04-25.md  2022-04-26.md  2022-04-27.md  2022-04-28.md  2022-05-06.md  2022-05-24.md  2022-06-02.md  2022-06-04.md  2022-06-05.md
public/: index.html
releases/0.0.13/: index.html  wasm.js
releases/0.0.6/: wasm.js
releases/0.0.7/assets/: level_1.custom
releases/0.0.9/assets/: level_1.level
server/: Cargo.toml  Makefile.toml
server/src/: game.rs  main.rs  server.rs
shared/: Cargo.toml
shared/src/: animation.rs  character.rs  collider.rs  game.rs  health.rs  lib.rs  map.rs  player.rs  utils.rs
shared/src/map/: loader.rs  map_item_system.rs  mod.rs  render.rs
shared/src/map/tiled_map/: tiled.rs
shared/src/player/: input.rs  interaction.rs  mod.rs
shared/src/weapons/: ammunition.rs  loader.rs  mod.rs  weapons.rs
shared/src/zombies/: mod.rs  zombie.rs
src/: game.rs  main.rs  map.rs  player.rs
src/map/: data.rs  loader.rs  mod.rs  render.rs
src/map/tiled_map/: mod.rs  texture.rs
src/tiled_map/: tiled.rs  tiled_usage.rs
