[package]
name = "cod-zombie-2d-clone"
authors = ["William Quintal <william95quintalwilliam@outlook.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/x11",
    "bevy/filesystem_watcher"
]

atlas = []

audio = [
    "bevy/bevy_audio",
    "bevy/vorbis"
]

[source.vendored-sources]
directory = "vendor"


[dependencies]
shared = { path = "../shared" }

bevy = {version = "0.7.0", default-features=false, features = ["bevy_render","bevy_core_pipeline","bevy_sprite", "bevy_gilrs"]}
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", rev = "91d44605888421d5f020d0f4004848e71ff4853d"}
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "main", features = ["ogg"] }

turbulence = "0.3"
bevy_networking_turbulence = { git = "https://github.com/berlingoqc/bevy_networking_turbulence/", branch = "master", default_features = false, features = ["use-webrtc"] }

approx = "0.5.1"

ron = "0.7.0"
serde = { version = "1", features = ["derive"] }
tiled = { version = "0.10.1", default-features=false}
rand = "0.8.5"
structopt = "0.3"
uuid = "=0.8.1"
anyhow ="1.0"
pathfinding = "3.0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-events = "0.1.1"
web-sys = "0.3.57"
