[package]
name = "shared"
version = "0.0.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bevy_networking_turbulence = { git = "https://github.com/berlingoqc/bevy_networking_turbulence/", branch="master", default-features = false, features = ["use-webrtc"] }
bevy = {version = "0.7.0", default-features=false, features = ["bevy_sprite", "bevy_render", "bevy_ui"]}

bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap/", rev = "91d44605888421d5f020d0f4004848e71ff4853d"}
tiled = { version = "0.10.1", default-features=false}
ron = "0.7.0"
rand = "0.8.5"
anyhow ="1.0"
pathfinding = "3.0.12"
